# authentication-sync

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
alembic/versions/: 2023_10_24_0737-e7a37fe4a387_.py  2023_10_24_0738-a0025389a579_.py  2023_10_28_1009-96245fc01d10_.py  2023_10_30_0759-157414a15f06_.py  2023_10_30_0802-3896bea6f398_.py  2023_11_02_0708-6664b0208955_.py  2023_11_10_2019-3c8e69885c69_.py  2024_01_07_1942-ad059f5190a5_.py
protos/: helloworld_pb2.py  permission_pb2.py  permission_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
src/: config.py  grpc_server.py  main.py
src/api/: include_routers.py
src/api/routers/: auth.py  permission.py
src/api/schemas/: auth.py
src/api/schemas/auth/: login.py  registration.py
src/api/schemas/permission/: check_permission.py
src/database/: session.py
src/database/models/: __init__.py  base.py  email.py  jwt_token.py  mixin.py  user.py
src/enums/: tag.py
src/grpc_services/: greeter.py  permission.py  user.py
src/rabbitmq/: connection.py
src/rabbitmq/producers/: link_producer.py  verification_producer.py
src/repositories/: auth.py  email.py  permission.py  user.py
src/repositories/base/: __init__.py  postgres.py  redis.py  sqlalchemy.py
src/services/: auth.py  dependencies.py  email.py  permission.py  user.py
src/services/exceptions/: __init__.py  base.py  base_exceptions.py  grpc_exceptions.py  http_exceptions.py  validator_exceptions.py
src/services/validators/: auth.py  base.py
src/utils/: jwt_token.py  jwt_token.py.isorted
