[tool.poetry]
name = "authentication-sync"
version = "0.1.0"
description = ""
authors = ["Grigory Malanchuk <grishamalanchuk@gmail.com>"]
readme = "README.md"
packages = [{include = "authentication_sync"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.0"}
flake8 = "^6.1.0"
mypy = "^1.6.1"
black = "^23.10.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
loguru = "^0.7.2"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.22"
passlib = "^1.7.4"
redis = "^5.0.1"
grpcio-tools = "^1.59.3"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
skip = ['venv']
lines_after_imports = 2

[tool.black]
line-length = 120
exclude = '/protos/'
